Lab6: exercitiile 1-3 completate