@@ -1,13 +1,8 @@
 package com.pao.test;
 
-import com.github.difflib.DiffUtils;
-import com.github.difflib.UnifiedDiffUtils;
-import com.github.difflib.patch.Patch;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
 
 class IncorrectExtensionException extends Exception {
     public IncorrectExtensionException(String expectedExtension, String filename) {
@@ -16,37 +11,37 @@ class IncorrectExtensionException extends Exception {
 }
 
 public class DiffGenerator {
-    public static void saveDiff(String expected, String actual, String filename) throws IncorrectExtensionException {
+
+    public static void saveDiff(String expected, String actual, String filename)
+            throws IncorrectExtensionException {
+
         if (!filename.endsWith(".diff")) {
             throw new IncorrectExtensionException(".diff", filename);
         }
-        // 1. Define your Expected and Actual outputs (usually from your tests)
-        List<String> expectedOutput = expected.lines().toList();
 
-        List<String> actualOutput = actual.lines().toList();
+        StringBuilder result = new StringBuilder();
+
+        String[] expectedLines = expected.split("\n");
+        String[] actualLines = actual.split("\n");
+
+        int max = Math.max(expectedLines.length, actualLines.length);
+
+        for (int i = 0; i < max; i++) {
+            String e = i < expectedLines.length ? expectedLines[i] : "";
+            String a = i < actualLines.length ? actualLines[i] : "";
+
+            if (!e.equals(a)) {
+                result.append("Line ").append(i + 1).append(":\n");
+                result.append("Expected: ").append(e).append("\n");
+                result.append("Actual:   ").append(a).append("\n\n");
+            }
+        }
 
         try {
-            // 2. Compute the differences (The Patch)
-            Patch<String> patch = DiffUtils.diff(expectedOutput, actualOutput);
-
-            // 3. Convert the Patch into the standard Unified Diff format
-            // Arguments: original filename, revised filename, original text, the patch, context size (lines around diff)
-            List<String> unifiedDiff = UnifiedDiffUtils.generateUnifiedDiff(
-                    "expected_output.txt",
-                    "actual_output.txt",
-                    expectedOutput,
-                    patch,
-                    3 // context size
-            );
-
-            // 4. Save it to a .diff file
-            Path outputPath = Path.of(filename);
-            Files.write(outputPath, unifiedDiff);
-
-            System.out.println("Diff file generated successfully at: " + outputPath.toAbsolutePath());
-
+            Files.writeString(Path.of(filename), result.toString());
+            System.out.println("Diff file generated (simplified) at: " + filename);
         } catch (IOException e) {
-            System.err.println("Failed to write diff file: " + e.getMessage());
+            System.err.println("Error writing diff file: " + e.getMessage());
         }
     }
 }
